--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,22 +12,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Sayochat"
         tools:targetApi="31">
+
+        <activity
+            android:name=".iniciosayochat.PerfilActivity"
+            android:exported="false" />
+
         <activity
             android:name=".iniciosayochat.CadastroActivity"
-            android:parentActivityName=".iniciosayochat.LoginActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".iniciosayochat.LoginActivity" />
+
+        <!-- MainActivity PRINCIPAL -->
         <activity
-            android:name=".MainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".iniciosayochat.LoginActivity"
+            android:name=".iniciosayochat.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
